--- a/package.json
+++ b/package.json
@@ -9,36 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@nestjs/common": "^11.0.11",
-    "@nestjs/core": "^11.0.11",
-    "@nestjs/platform-express": "^11.0.11",
-    "@reduxjs/toolkit": "^2.6.1",
-    "@tailwindcss/forms": "^0.5.10",
-    "@tailwindcss/typography": "^0.5.16",
-    "axios": "^1.8.3",
-    "class-transformer": "^0.5.1",
-    "class-validator": "^0.14.1",
-    "mongoose": "^8.12.1",
-    "next": "^15.2.2",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "react-redux": "^9.2.0",
-    "tailwind": "^4.0.0"
+    "@reduxjs/toolkit": "^2.0.1",
+    "axios": "^1.6.2",
+    "mongodb": "^6.3.0",
+    "next": "14.0.4",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-redux": "^9.0.4"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "@nestjs/testing": "^11.0.11",
-    "@testing-library/jest-dom": "^6.6.3",
-    "@testing-library/react": "^16.2.0",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "autoprefixer": "^10.4.21",
-    "eslint": "^9",
-    "eslint-config-next": "15.2.2",
-    "jest": "^29.7.0",
-    "postcss": "^8.5.3",
-    "tailwindcss": "^4.0.13",
-    "typescript": "^5"
+    "@types/node": "^20.10.5",
+    "@types/react": "^18.2.45",
+    "@types/react-dom": "^18.2.18",
+    "autoprefixer": "^10.4.16",
+    "postcss": "^8.4.32",
+    "tailwindcss": "^3.4.0",
+    "typescript": "^5.3.3"
   }
 }
